--- a/app/src/main/res/layout/fragment_current.xml
+++ b/app/src/main/res/layout/fragment_current.xml
@@ -73,7 +73,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:text="بسیار شدید"
             android:textColor="@color/textColor"
             android:textSize="@dimen/feature_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -117,7 +116,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:text="1000 m"
             android:textColor="@color/textColor"
             android:textSize="@dimen/feature_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -161,7 +159,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:text="20 km/hr"
             android:textColor="@color/textColor"
             android:textSize="@dimen/feature_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -206,7 +203,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:text="40%"
             android:textColor="@color/textColor"
             android:textSize="@dimen/feature_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -309,7 +305,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:text="06:20"
             android:textColor="@color/textColor"
             android:textSize="@dimen/feature_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -356,7 +351,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:text="16:20"
             android:textColor="@color/textColor"
             android:textSize="@dimen/feature_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -403,7 +397,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:text="20 °C"
             android:textColor="@color/textColor"
             android:textSize="@dimen/feature_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -445,7 +438,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:text="50 %"
             android:textColor="@color/textColor"
             android:textSize="@dimen/feature_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -559,7 +551,6 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="8dp"
-            android:text="°C"
             android:textColor="@color/textColor"
             app:layout_constraintBottom_toBottomOf="@+id/tv_temprature"
             app:layout_constraintEnd_toEndOf="parent"
@@ -576,7 +567,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:src="@drawable/clearn"
+            android:src=""
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
             app:layout_constraintStart_toStartOf="parent"
@@ -589,7 +580,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:text="25"
             android:textColor="@color/textColor"
             android:textSize="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -606,7 +596,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginRight="32dp"
             android:layout_marginBottom="8dp"
-            android:text="صاف"
             android:textColor="@color/textColor"
             android:textSize="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
