--- a/app/src/main/res/layout/card_hourly.xml
+++ b/app/src/main/res/layout/card_hourly.xml
@@ -28,6 +28,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginBottom="8dp"
         android:text="رعد و برق و باران شدید"
+        android:textColor="#ff5303"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_temprature_hourly_card"
         app:layout_constraintEnd_toEndOf="@+id/tv_local_time_hourly_card"
@@ -52,6 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="8dp"
         android:text="°C"
+        android:textColor="#24a700"
         app:layout_constraintBottom_toBottomOf="@+id/tv_temprature_hourly_card"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -66,6 +68,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:text="12:00"
+        android:textColor="#cb00f9"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="@+id/img_state_hourly_card"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,6 +82,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="25"
+        android:textColor="#24a700"
         android:textSize="35dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/img_state_hourly_card"
