--- a/app/src/main/res/layout/card_daily.xml
+++ b/app/src/main/res/layout/card_daily.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="#565050"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -34,7 +35,7 @@
         android:layout_marginBottom="8dp"
         android:text="بیشینه دما"
         android:textSize="25dp"
-        android:textColor="#ff0000"
+        android:textColor="#faba42"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -54,7 +55,7 @@
         android:layout_marginBottom="8dp"
         android:text="کمینه دما"
         android:textSize="25dp"
-        android:textColor="#0202fd"
+        android:textColor="#2cffea"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -86,7 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="21"
-        android:textColor="#ff0000"
+        android:textColor="#faba42"
         android:textSize="25dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="@+id/tv_min_temp"
@@ -97,7 +98,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="9"
-        android:textColor="#0202fd"
+        android:textColor="#2cffea"
         android:textSize="25dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/tv_min_temp_lable"
         app:layout_constraintEnd_toEndOf="@+id/tv_temp"
@@ -128,7 +129,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:text="شنبه 27 بهمن"
-        android:textColor="#cb00f9"
+        android:textColor="#50f481"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
